--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <img src="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1621178014/Image_about_white_in_IG_Highlights_icons_by_Giovanna_All_fekw5l.jpg", class="marmor"/>
 </div>
 <div class="newname">
-<img src="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1621182642/profilepic_adsvlc.png", class="profilbild"/>
+<img src="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1633451791/IMG_2090_q7ylf7.jpg", class="profilbild"/>
 </div>
 <div class="newtitle">
 <h1 class="title">Audrey Herber</h1>
@@ -65,5 +65,29 @@
 			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
 		</div>
 	</div>
+</div>
+</div>
+
+<div class="newtitlesecond">
+<h1 class="title2">Usefull Links</h1>
+</div>
+
+<div class="row">
+<div class="col-sm-6">
+<div class="newlinks">
+<button class="buttoncv" type="button"><a href="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1633502873/audreycv-1_n6k3oi.png" download rel="noopener noreferrer" target="_blank">
+   CV/1
+</a>
+</button>
+</div>
+</div>
+
+<div class="col-sm-6">
+<div class="newlinks2">
+<button class="buttoncv" type="button"><a href="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1633502880/audreycv-2_ssusts.png" download rel="noopener noreferrer" target="_blank">
+   CV/2
+</a>
+</button>
+</div>
 </div>
 </div>
