--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -94,7 +94,7 @@
 <div class="col-sm-6">
 <div class="newlinks2">
 <button class="buttoncv" type="button"><a href="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1633511465/Lettre_de_motivation_The_Kooples-1_adbbg6.png" download rel="noopener noreferrer" target="_blank">
-   Lettre den Motivation/1
+   Lettre de Motivation/1
 </a>
 </button>
 </div>
@@ -103,7 +103,7 @@
 <div class="col-sm-6">
 <div class="newlinks2">
 <button class="buttoncv" type="button"><a href="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1633511474/Lettre_de_motivation_The_Kooples-2_uxonte.png" download rel="noopener noreferrer" target="_blank">
-   Lettre den Motivation/2
+   Lettre de Motivation/2
 </a>
 </button>
 </div>
