--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,4 +81,13 @@
 </button>
 </div>
 </div>
+
+<div class="col-sm-6">
+<div class="newlinks2">
+<button class="buttoncv" type="button"><a href="https://res.cloudinary.com/dn6wh4u2h/image/upload/v1633502880/audreycv-2_ssusts.png" download rel="noopener noreferrer" target="_blank">
+   CV/2
+</a>
+</button>
+</div>
+</div>
 </div>
